feat: migrate to ascension UI and refactor backend security